--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@emotion/react": "^11.13.0",
