--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "react-hook-form": "^7.52.2",
+    "react-select2": "^4.0.3",
     "react-toastify": "^10.0.5",
+    "select2": "^4.1.0-rc.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
