--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "filepond": "^4.31.2",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.12",
     "next": "14.2.5",
     "next-pwa": "^5.6.0",
     "react": "^18",
@@ -32,6 +35,7 @@
     "framer-motion": "^11.3.30",
     "mui-one-time-password-input": "^2.0.3",
     "postcss": "^8",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.52.2",
     "react-select2": "^4.0.3",
     "react-toastify": "^10.0.5",
