update orders and profiles page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-leaflet": "^4.2.1",
     "save": "^2.9.0",
     "swr": "^2.2.5",
     "zustand": "^4.5.5"
@@ -26,6 +27,7 @@
     "@mui/base": "^5.0.0-beta.40",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
